--- a/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
+++ b/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
@@ -470,16 +470,16 @@
 						        <label class="form-check-label" for="gyeonggiCheck">경기</label>
 						    </div>
 						</div>
-                        <div class="mb-8">
+<!--                         <div class="mb-8"> -->
                            
-                           <h5 class="mb-3">금액</h5>
-                           <div>
+<!--                            <h5 class="mb-3">금액</h5> -->
+<!--                            <div> -->
                             
-                              <div id="priceRange" class="mb-3"></div>
-                              <small class="text-muted">금액 :</small>
-                              <span id="priceRange-value" class="small"></span>
-                           </div>
-                        </div>
+<!--                               <div id="priceRange" class="mb-3"></div> -->
+<!--                               <small class="text-muted">금액 :</small> -->
+<!--                               <span id="priceRange-value" class="small"></span> -->
+<!--                            </div> -->
+<!--                         </div> -->
                         <div class="mb-8">
                            <h5 class="mb-3">즐겨찾기</h5>
                            <input class="form-check-input" type="checkbox" value="" id="" />
@@ -487,71 +487,71 @@
 
                         </div>
                         <!-- rating -->
-                        <div class="mb-8">
-                           <h5 class="mb-3">별점</h5>
-                           <div>
-                              <!-- form check -->
-                              <div class="form-check mb-2">
-                                 <!-- input -->
-                                 <input class="form-check-input" type="checkbox" value="" id="ratingFive" />
-                                 <label class="form-check-label" for="ratingFive">
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                 </label>
-                              </div>
-                              <!-- form check -->
-                              <div class="form-check mb-2">
-                                 <!-- input                                                                 checked  -->
-                                 <input class="form-check-input" type="checkbox" value="" id="ratingFour"  />
-                                 <label class="form-check-label" for="ratingFour">
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                 </label>
-                              </div>
-                              <!-- form check -->
-                              <div class="form-check mb-2">
-                                 <!-- input -->
-                                 <input class="form-check-input" type="checkbox" value="" id="ratingThree" />
-                                 <label class="form-check-label" for="ratingThree">
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                 </label>
-                              </div>
-                              <!-- form check -->
-                              <div class="form-check mb-2">
-                                 <!-- input -->
-                                 <input class="form-check-input" type="checkbox" value="" id="ratingTwo" />
-                                 <label class="form-check-label" for="ratingTwo">
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                 </label>
-                              </div>
-                              <!-- form check -->
-                              <div class="form-check mb-2">
-                                 <!-- input -->
-                                 <input class="form-check-input" type="checkbox" value="" id="ratingOne" />
-                                 <label class="form-check-label" for="ratingOne">
-                                    <i class="bi bi-star-fill text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                    <i class="bi bi-star text-warning"></i>
-                                 </label>
-                              </div>
-                           </div>
-                        </div>
+<!--                         <div class="mb-8"> -->
+<!--                            <h5 class="mb-3">별점</h5> -->
+<!--                            <div> -->
+<!--                               form check -->
+<!--                               <div class="form-check mb-2"> -->
+<!--                                  input -->
+<!--                                  <input class="form-check-input" type="checkbox" value="" id="ratingFive" /> -->
+<!--                                  <label class="form-check-label" for="ratingFive"> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                  </label> -->
+<!--                               </div> -->
+<!--                               form check -->
+<!--                               <div class="form-check mb-2"> -->
+<!--                                  input                                                                 checked  -->
+<!--                                  <input class="form-check-input" type="checkbox" value="" id="ratingFour"  /> -->
+<!--                                  <label class="form-check-label" for="ratingFour"> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                  </label> -->
+<!--                               </div> -->
+<!--                               form check -->
+<!--                               <div class="form-check mb-2"> -->
+<!--                                  input -->
+<!--                                  <input class="form-check-input" type="checkbox" value="" id="ratingThree" /> -->
+<!--                                  <label class="form-check-label" for="ratingThree"> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                  </label> -->
+<!--                               </div> -->
+<!--                               form check -->
+<!--                               <div class="form-check mb-2"> -->
+<!--                                  input -->
+<!--                                  <input class="form-check-input" type="checkbox" value="" id="ratingTwo" /> -->
+<!--                                  <label class="form-check-label" for="ratingTwo"> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                  </label> -->
+<!--                               </div> -->
+<!--                               form check -->
+<!--                               <div class="form-check mb-2"> -->
+<!--                                  input -->
+<!--                                  <input class="form-check-input" type="checkbox" value="" id="ratingOne" /> -->
+<!--                                  <label class="form-check-label" for="ratingOne"> -->
+<!--                                     <i class="bi bi-star-fill text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                     <i class="bi bi-star text-warning"></i> -->
+<!--                                  </label> -->
+<!--                               </div> -->
+<!--                            </div> -->
+<!--                         </div> -->
                         <!-- 광고 버튼 -->
                         <!-- <div class="mb-8 position-relative">
                            
