--- a/foot/src/main/resources/templates/user/signup/SignupUserForm.html
+++ b/foot/src/main/resources/templates/user/signup/SignupUserForm.html
@@ -6,9 +6,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta content="Codescandy" name="author">
-  <title>Sign up eCommerce HTML Template - FreshCart</title>
-  <!-- Favicon icon-->
-  <link rel="shortcut icon" type="image/x-icon" href="/user/template/assets/images/favicon/favicon.ico">
+  <title>Now Futsal</title>
+<!-- Favicon icon-->
+	<link rel="shortcut icon" type="image/x-icon" href="/user/template/assets/images/logo/ball.png">
 	
   <!-- 달력 CSS 플러그인 추가 -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css"/>
