--- a/foot/src/main/resources/templates/user/include/head.html
+++ b/foot/src/main/resources/templates/user/include/head.html
@@ -8,14 +8,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta content="Codescandy" name="author">
-	<title>Homepage v1 - eCommerce HTML Template - FreshCart</title>
+	<title>Now Futsal</title>
 
 	<link href="/user/template/assets/libs/slick-carousel/slick/slick.css" rel="stylesheet" />
 	<link href="/user/template/assets/libs/slick-carousel/slick/slick-theme.css" rel="stylesheet" />
 	<link href="/user/template/assets/libs/tiny-slider/dist/tiny-slider.css" rel="stylesheet" />
 
 	<!-- Favicon icon-->
-	<link rel="shortcut icon" type="image/x-icon" href="/user/template/assets/images/favicon/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="/user/template/assets/images/logo/ball.png">
 
 
 	<!-- Libs CSS -->
