--- a/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
+++ b/foot/src/main/resources/templates/xdm/codegroup/codeGroupXdmList.html
@@ -139,10 +139,10 @@
                                 <table class="table table-bordered table-striped table-hover  dataTable">
                                     <thead>
                                         <tr>
-                                            <th>
+                                            <!-- <th>
                                                 <input class="form-check-input" type="checkbox" id="entire">
                                                 <label class="form-check-label" for="entire"></label>
-                                            </th>
+                                            </th> -->
                                             <th>#</th>
                                             <th>사용</th>
                                             <th>코드그룹 코드</th>
@@ -162,11 +162,11 @@
                                     		</td>
                                     	</tr>
                                         <tr th:if="${!#lists.isEmpty(list)}" th:each="list : ${list}">
-                                            <td>
+                                           <!--  <td>
                                             	
                                                 <input class="form-check-input row-checkbox" th:id="${list.cdgSeq}" type="checkbox">
                                                 <label class="form-check-label" th:for="${list.cdgSeq}"></label>
-                                            </td>
+                                            </td> -->
                                             <td th:text="${vo.totalRows - ((vo.thisPage - 1) * vo.rowNumToShow + listStat.index)}"></td>
                                             <td th:text="${list.usedOrNot}"></td>
                                             <td th:text="${list.cdgSeq}"></td>
@@ -204,17 +204,17 @@
 								    
 								</div>
 							
-                                <a role="button" href="" class="btn btn-danger" style=" margin-right:  5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                               <!--  <a role="button" href="" class="btn btn-danger" style=" margin-right:  5px;"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
                                     <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
                                   </svg>
-                                </a>
+                                </a> -->
                                 <!-- 업데이트 삭제 버튼 -->
-                                <button type="button" class="btn btn-danger" id="uelete">
+                                <!-- <button type="button" class="btn btn-danger" id="uelete">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                                         <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
                                         <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
                                       </svg>
-                                    </button>
+                                    </button> -->
                                     
                                
                                 <button  id="btnForm" class="btn btn-primary" type="button" style="float: right; margin-right:  5px;" >
