--- a/foot/src/main/resources/templates/xdm/futsal/FutsalXdmForm.html
+++ b/foot/src/main/resources/templates/xdm/futsal/FutsalXdmForm.html
@@ -75,8 +75,22 @@
                                     <div class="col-sm-12">
                                         <div class="form-group">
                                             <div class="form-line">
-                                                <textarea rows="4" class="form-control no-resize" placeholder="주소를 입력해주세요" id="futsalAddress" name="futsalAddress"></textarea>
+                                                <!-- <textarea rows="4" class="form-control no-resize" placeholder="주소를 입력해주세요" id="futsalAddress" name="futsalAddress"></textarea> -->
+                                               <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"
+											       style="background-color: #FF6F61; color: white; padding: 10px 20px; font-size: 16px; 
+											              border: none; border-radius: 5px; cursor: pointer; 
+											              transition: background-color 0.3s ease;">
+                                                <input class="form-control" type="text" id="zipCode" name="zipCode" placeholder="우편번호">
+												
+												<input class="form-control" type="text" id="futsalAddress" name="futsalAddress" placeholder="주소"><br>
+												<input class="form-control" type="text" id="detailedAddress" name="detailedAddress" placeholder="상세주소">
+												<input class="form-control" type="text" id="latitude" name="latitude" placeholder="위도">
+												<input class="form-control" type="text" id="hardness" name="hardness" placeholder="경도">
+												
+												
                                             	<span id="futsalAddressError" style="color: red; font-size: 10px;"></span>
+                                            	<div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
+                                            	
                                             </div>
                                         </div>
                                     </div>
@@ -84,7 +98,7 @@
     
                                 
                             </div>
-                            
+                            <div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
                             <div>
                                 <h2 class="card-inside-title">풋살장 시설 및 이용 규칙</h2>
                                 <div class="row clearfix">
@@ -190,6 +204,16 @@
       <!-- Dropzone Css -->
     <link href="/xdm/template/master/plugins/dropzone/dropzone.css" rel="stylesheet">
     
+    
+    
+    
+	
+	
+
+	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=14e0e814070aaeeefafccf74fcf23c86&libraries=services"></script>
+
+    
     <script type="text/javascript">
 
 	document.getElementById("btuSave").onclick = function() {
@@ -274,7 +298,7 @@
 		
 		//풋살장 주소 검사
 		if(futsalAddress.value == ""){
-			futsalAddressError.innerText = "풋살장 주소를 입력해주세요";
+			futsalAddressError.innerText = "우편번호 찾기 해서 주소 입력해주세요";
 			futsalAddress.focus();
 			isValid = false;
 		} else {
@@ -307,6 +331,59 @@
 	}
 	
 	</script>
+	
+<script type="text/javascript">
+    var mapContainer = document.getElementById('map'),
+        mapOption = {
+            center: new kakao.maps.LatLng(37.537187, 127.005476),
+            level: 5
+        };
+
+    var map = new kakao.maps.Map(mapContainer, mapOption);
+    var geocoder = new kakao.maps.services.Geocoder();
+    var marker = new kakao.maps.Marker({
+        position: new kakao.maps.LatLng(37.537187, 127.005476),
+        map: map
+    });
+
+    function sample6_execDaumPostcode() {
+        new daum.Postcode({
+            oncomplete: function(data) {
+                var addr = '';
+
+                if (data.userSelectedType === 'R') {
+                    addr = data.roadAddress;
+                } else {
+                    addr = data.jibunAddress;
+                }
+
+                document.getElementById('zipCode').value = data.zonecode;
+                document.getElementById("futsalAddress").value = addr;
+                document.getElementById("detailedAddress").focus();
+
+                geocoder.addressSearch(addr, function(results, status) {
+                    if (status === kakao.maps.services.Status.OK) {
+                        var result = results[0];
+                        var coords = new kakao.maps.LatLng(result.y, result.x);
+
+                        // 지도 관련 처리
+                        mapContainer.style.display = "block";
+                        map.relayout();
+                        map.setCenter(coords);
+                        marker.setPosition(coords);
+
+                        // 위도, 경도 필드에 값 입력
+                        document.getElementById("latitude").value = result.y;
+                        document.getElementById("hardness").value = result.x;
+                    }
+                });
+            }
+        }).open();
+    }
+</script>
+
+
+	
 
 </body>
 </html>
