--- a/foot/src/main/resources/templates/xdm/futsal/FutsalXdmMfom.html
+++ b/foot/src/main/resources/templates/xdm/futsal/FutsalXdmMfom.html
@@ -3,7 +3,7 @@
 
 <div th:replace="~{xdm/include/head :: head}"></div>
 
-<form action="/FutsalUpdt" method="get" id="form">
+<form action="/FutsalUpdt" method="post" id="form">
 <input type="hidden" id="fiSeq" name="fiSeq" th:value="${item?.fiSeq}" />
 <section class="content">
         <div class="container-fluid">
@@ -76,8 +76,21 @@
                                     <div class="col-sm-12">
                                         <div class="form-group">
                                             <div class="form-line">
-                                                <textarea rows="4" class="form-control no-resize" id="futsalAddress" name="futsalAddress" th:text="${item?.futsalAddress}"  th:value="${item?.futsalAddress}"></textarea>
+                                               <!--  <textarea rows="4" class="form-control no-resize" id="futsalAddress" name="futsalAddress" th:text="${item?.futsalAddress}"  th:value="${item?.futsalAddress}"></textarea> -->
+                                                  <input type="button" onclick="sample6_execDaumPostcode()" value="우편번호 찾기"
+											       style="background-color: #FF6F61; color: white; padding: 10px 20px; font-size: 16px; 
+											              border: none; border-radius: 5px; cursor: pointer; 
+											              transition: background-color 0.3s ease;">
+                                                <input class="form-control" type="text" id="zipCode" name="zipCode" placeholder="우편번호"  th:value="${item?.zipCode}">
+												
+												<input class="form-control" type="text" id="futsalAddress" name="futsalAddress" placeholder="주소"   th:value="${item?.futsalAddress}"><br>
+												<input class="form-control" type="text" id="detailedAddress" name="detailedAddress" placeholder="상세주소"   th:value="${item?.detailedAddress}">
+												<div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
+												<input class="form-control" type="text" id="latitude" name="latitude" placeholder="위도 (우편번호 찾기 눌러서 주소 검색하세요)" th:value="${item?.latitude}">
+												<input class="form-control" type="text" id="hardness" name="hardness" placeholder="경도 (우편번호 찾기 눌러서 주소 검색하세요)" th:value="${item?.hardness}">
+												
                                             	<span id="futsalAddressError" style="color: red; font-size: 10px;"></span>
+                                            	<div id="map" style="width:300px;height:300px;margin-top:10px;display:none"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -216,6 +229,13 @@
       <!-- Dropzone Css -->
     <link href="/xdm/template/master/plugins/dropzone/dropzone.css" rel="stylesheet">
     
+
+	
+
+	<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+	<script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=14e0e814070aaeeefafccf74fcf23c86&libraries=services"></script>
+	
+    
     <script type="text/javascript">
     
 		if(document.getElementById("btnUelete")){
@@ -324,7 +344,7 @@
 		
 		//풋살장 주소 검사
 		if(futsalAddress.value == ""){
-			futsalAddressError.innerText = "풋살장 주소를 입력해주세요";
+			futsalAddressError.innerText = "우편번호 찾기 해서 주소 입력해주세요";
 			futsalAddress.focus();
 			isValid = false;
 		} else {
@@ -353,6 +373,7 @@
 		// 데이터 값이 있을 경우 폼 제출
         if (isValid) {
         	console.log("폼 제출 시도");
+        	
             document.getElementById("form").submit();
         }else {
             console.log("유효성 검사 실패");
@@ -360,6 +381,56 @@
 	}
 	
 	</script>
+<script type="text/javascript">
+    var mapContainer = document.getElementById('map'),
+        mapOption = {
+            center: new kakao.maps.LatLng(37.537187, 127.005476),
+            level: 5
+        };
+
+    var map = new kakao.maps.Map(mapContainer, mapOption);
+    var geocoder = new kakao.maps.services.Geocoder();
+    var marker = new kakao.maps.Marker({
+        position: new kakao.maps.LatLng(37.537187, 127.005476),
+        map: map
+    });
+
+    function sample6_execDaumPostcode() {
+        new daum.Postcode({
+            oncomplete: function(data) {
+                var addr = '';
+
+                if (data.userSelectedType === 'R') {
+                    addr = data.roadAddress;
+                } else {
+                    addr = data.jibunAddress;
+                }
+
+                document.getElementById('zipCode').value = data.zonecode;
+                document.getElementById("futsalAddress").value = addr;
+                document.getElementById("detailedAddress").focus();
+
+                geocoder.addressSearch(addr, function(results, status) {
+                    if (status === kakao.maps.services.Status.OK) {
+                        var result = results[0];
+                        var coords = new kakao.maps.LatLng(result.y, result.x);
+
+                        // 지도 관련 처리
+                        mapContainer.style.display = "block";
+                        map.relayout();
+                        map.setCenter(coords);
+                        marker.setPosition(coords);
+
+                        // 위도, 경도 필드에 값 입력
+                        document.getElementById("latitude").value = result.y;
+                        document.getElementById("hardness").value = result.x;
+                    }
+                });
+            }
+        }).open();
+    }
+</script>
+
 
 </body>
 </html>
