--- a/foot/src/main/resources/templates/user/index/indexUserView.html
+++ b/foot/src/main/resources/templates/user/index/indexUserView.html
@@ -515,7 +515,7 @@
                                  </div> -->
                                  <a href="#">
                                     <!-- img -->
-                                    <img src="/user/template/assets/images/products/라온구장 이미지.jpg"
+                                    <img th:src="${list.path}"
                                        alt="Grocery Ecommerce Template" class="mb-3 img-fluid" />
                                  </a>
                                  
