--- a/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
+++ b/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
@@ -616,13 +616,41 @@
 					                <div class="card-body">
 					                    <div class="text-center position-relative">
 					                        <a href="#">
-					                            <img src="/user/template/assets/images/products/라온구장 이미지.jpg"
+					                            <img th:src="${list.path}"
 					                                alt="Grocery Ecommerce Template" class="mb-3 img-fluid" />
 					                        </a>
 					                    </div>
 					                    <h2 class="fs-6">
 										    <a href="Detailed-page.html" class="text-inherit text-decoration-none futsal-name" th:text="${list.futsalName}"></a>
 										</h2>
+<!-- 							<div class="mb-4" > -->
+   							
+<!-- 							    <small class="text-warning" th:text="${averageRating[list.index]}"> -->
+							
+<!-- 							    <i class="bi bi-star-fill" th:if="${item.averageRating >= 1.0}"></i> -->
+<!-- 							    <i class="bi bi-star-fill" th:if="${item.averageRating >= 2.0}"></i> -->
+<!-- 							    <i class="bi bi-star-fill" th:if="${item.averageRating >= 3.0}"></i> -->
+<!-- 							    <i class="bi bi-star-fill" th:if="${item.averageRating >= 4.0}"></i> -->
+<!-- 							    <i class="bi bi-star-fill" th:if="${item.averageRating >= 5.0}"></i> -->
+<!-- 							</small> -->
+<!-- 							</div> -->
+										
+    <!-- rating -->
+
+										
+<!-- <div class="mb-4"> -->
+<!--     rating -->
+<!--     <small class="text-warning"> -->
+<!--         별점 1~5점 동적으로 출력 -->
+<!--         <span th:each="i : ${#numbers.sequence(1, 5)}"> -->
+<!--             <i class="bi"  -->
+<!--                th:class="${list.avgStarScore >= i} ? 'bi-star-fill' : 'bi-star'"></i> -->
+<!--         </span> -->
+<!--     </small> -->
+<!-- </div> -->
+
+
+										
 
 					                    <div>
 					                        <span>지역 : </span><span th:text="${@codeService.selectOneCachedCode(list.futsalRegion)}"></span>
