--- a/foot/src/main/resources/templates/xdm/futsal/FutsalXdmForm.html
+++ b/foot/src/main/resources/templates/xdm/futsal/FutsalXdmForm.html
@@ -3,7 +3,7 @@
 
 <div th:replace="~{xdm/include/head :: head}"></div>
 
-<form action="/FutsalInst" method="post" id="form">
+<form action="/FutsalInst" method="post" id="form" enctype="multipart/form-data">
 
 <section class="content">
         <div class="container-fluid">
@@ -124,8 +124,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!-- <form action="/" id="frmFileUpload" class="dropzone" method="post" enctype="multipart/form-data">
+                            </div> 
+                          
                                 <div class="dz-message">
                                     <div class="drag-icon-cph">
                                         <i class="material-icons">touch_app</i>
@@ -134,9 +134,14 @@
                                     
                                 </div>
                                 <div class="fallback">
-                                    <input name="file" type="file" multiple />
+                                    <input  id="uploadImg1" name="uploadImg1" type="file" multiple />
+                                    <input  id="uploadImg1Type" name="uploadImg1Type" value="1" type="hidden" />
+                                    <input  id="uploadImg1MaxNumber" name="uploadImg1MaxNumber" value="1" type="hidden" />
+                                    <input  id="ifbnSeq" name="ifbnSeq" th:value="fiSeq" type="hidden" />
+                                    
                                 </div>
-                            </form> -->
+                            
+          
                             <br>
                             <button type="button" class="btn bg-red waves-effect" id="btuSave">
                                 등록 하기
@@ -327,6 +332,7 @@
 		// 데이터 값이 있을 경우 폼 제출
         if (isValid) {
             document.getElementById("form").submit();
+          
         }
 	}
 	
