--- a/foot/src/main/resources/templates/xdm/futsal/FutsalXdmMfom.html
+++ b/foot/src/main/resources/templates/xdm/futsal/FutsalXdmMfom.html
@@ -125,6 +125,20 @@
                                     </div>
                                 </div>
                             </div>
+                                <div class="dz-message">
+                                    <div class="drag-icon-cph">
+                                        <i class="material-icons">touch_app</i>
+                                    </div>
+                                    <h3>여기에 파일을 놓거나 클릭하여 업로드하세요.</h3>
+                                    
+                                </div>
+                                <div class="fallback">
+                                    <input  id="uploadImg1" name="uploadImg1" type="file" multiple />
+                                    <input  id="uploadImg1Type" name="uploadImg1Type" value="1" type="hidden" />
+                                    <input  id="uploadImg1MaxNumber" name="uploadImg1MaxNumber" value="1" type="hidden" />
+                                    <input  id="ifbnSeq" name="ifbnSeq" th:value="fiSeq" type="hidden" />
+                                    
+                                </div>
                             <!-- <form action="/" id="frmFileUpload" class="dropzone" method="post" enctype="multipart/form-data">
                                 <div class="dz-message">
                                     <div class="drag-icon-cph">
